fixed alignment of .order and added links linking to the product

--- a/crush/css/grid.css
+++ b/crush/css/grid.css
@@ -56,14 +56,4 @@
     width: 25%;
 }
 
-/*---- 7 COLUMN GRID FOR CHECKOUT PROCESS----*/
-
-.flex-grid-seven {
-    display: flex;
-    justify-content: space-around;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-.flex-grid-seven .col {
-}
+.
